--- a/src/app/example.component.css
+++ b/src/app/example.component.css
@@ -56,8 +56,9 @@ ion-tab-bar {
   margin: 6px;
   color: #e3ebf8;
 }
-ion-list {
-  padding-top: 100px;
+ion-list.md {
+  display: block;
+
 }
 ion-icon {
   padding: 4px;
