--- a/src/app/example.component.html
+++ b/src/app/example.component.html
@@ -6,26 +6,50 @@
   </ion-row>
 </ion-header>
 
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>Portfolio total</ion-card-title>
-  </ion-card-header>
-
-  <ion-card-content>
-    <strong> £452,657.98 </strong>
-  </ion-card-content>
-  <ion-chip [outline]="true">ISA</ion-chip>
-  <ion-chip>GIA</ion-chip>
-  <ion-chip>JISA</ion-chip>
-</ion-card>
-
+    <ion-col>
+      <ion-list [inset]="true">
+        <ion-item>
+          <ion-label>Pokémon Yellow</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Mega Man X</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>The Legend of Zelda</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Pac-Man</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Super Mario World</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Mega Man X</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Mega Man X</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Mega Man X</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Mega Man X</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Mega Man X</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Mega Man X</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Mega Man X</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-col>
+  
 <ion-tabs>
   <ion-router-outlet></ion-router-outlet>
-  <ion-row>
-    <ion-col>
-      
-    </ion-col>
-  </ion-row>
+  
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
