--- a/src/app/example.component.html
+++ b/src/app/example.component.html
@@ -7,9 +7,9 @@
 </ion-header>
 
     <ion-col>
-      <ion-list [inset]="true">
+      <ion-list [inset]="false">
         <ion-item>
-          <ion-label>Pokémon Yellow</ion-label>
+          <ion-label >Pokémon Yellow</ion-label>
         </ion-item>
         <ion-item>
           <ion-label>Mega Man X</ion-label>
@@ -49,8 +49,6 @@
   
 <ion-tabs>
   <ion-router-outlet></ion-router-outlet>
-  
-
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="apps-outline"></ion-icon>
