--- a/src/app/example.component.css
+++ b/src/app/example.component.css
@@ -56,8 +56,12 @@ ion-tab-bar {
   margin: 6px;
   color: #e3ebf8;
 }
-ion-list.md {
+ion-list {
   display: block;
+  background-color: #d9d9d9;
+  color: #333333;
+  border-radius: 4px;
+  border: 1px solid #003a05;
 
 }
 ion-icon {
