--- a/src/app/example.component.css
+++ b/src/app/example.component.css
@@ -59,9 +59,8 @@ ion-tab-bar {
 ion-list {
   display: block;
   background-color: #d9d9d9;
-  color: #333333;
   border-radius: 4px;
-  border: 1px solid #003a05;
+  border: 1px solid #333333;
 
 }
 ion-icon {
