--- a/src/app/example.component.html
+++ b/src/app/example.component.html
@@ -9,40 +9,40 @@
     <ion-col>
       <ion-list [inset]="false">
         <ion-item>
-          <ion-label >Pokémon Yellow</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Mega Man X</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>The Legend of Zelda</ion-label>
+          <ion-label>TLiontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Pac-Man</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Super Mario World</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Mega Man X</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Mega Man X</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Mega Man X</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Mega Man X</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Mega Man X</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Mega Man X</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Mega Man X</ion-label>
+          <ion-label>Liontrust | 31st Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
       </ion-list>
       
