--- a/src/app/example.component.css
+++ b/src/app/example.component.css
@@ -61,6 +61,7 @@ ion-list {
   background-color: #d9d9d9;
   border-radius: 4px;
   border: 1px solid #333333;
+  font-size: smaller;
 
 }
 ion-icon {
