--- a/src/app/example.component.css
+++ b/src/app/example.component.css
@@ -43,26 +43,16 @@ ion-accordion-group {
 ion-item {
   color: #333333;
 }
-ion-tab-button{
-  background-color: #3171e0;
-  color: white;
+ion-tab-button {
+  background-color: #E3EBF8;
+  color: #135AC5;
 }
+
 ion-tab-bar {
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 30px;
-  padding-bottom: 4px;
   margin: 6px;
-  background-color: #3171e0;
-}
-ion-list {
-  display: block; 
-  border-radius: 4px;
-  border: 1px solid #333333;
-  font-size: smaller;
 
-}
-ion-icon {
-  padding: 4px;
 }
