--- a/src/app/example.component.html
+++ b/src/app/example.component.html
@@ -15,7 +15,7 @@
           <ion-label>Liontrust UK| 29 Dec 21 | 0203415-0001 | £855.59</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>TLiontrust Asia| 27 Dec 21 | 0203415-0001 | £7,386.78</ion-label>
+          <ion-label>Liontrust Asia| 27 Dec 21 | 0203415-0001 | £7,386.78</ion-label>
         </ion-item>
         <ion-item>
           <ion-label>Liontrust Special| 20 Dec 21 | 0203415-0001 | £12,073.89</ion-label>
