--- a/src/app/example.component.html
+++ b/src/app/example.component.html
@@ -5,43 +5,67 @@
     <ion-icon name="notifications-outline" float="right"></ion-icon>
   </ion-row>
 </ion-header>
-
     <ion-col>
       <ion-list [inset]="false">
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust Global | 31 Dec 21 | 0203415-0001 | £9,679.21</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust UK| 29 Dec 21 | 0203415-0001 | £855.59</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust Asia| 27 Dec 21 | 0203415-0001 | £7,386.78</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust Special| 20 Dec 21 | 0203415-0001 | £12,073.89</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust FTSE| 19 Dec 21 | 0203415-0001 | £9,559.51</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust Dist| 17 Dec 21 | 0203415-0001 | £46,987.98</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+          
           <ion-label>Liontrust | 16 Dec 21 | 0203415-0001 | £5,376.22</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust | 15 Dec 21 | 0203415-0001 | £11,507.35</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust | 14 Dec 21 | 0203415-0001 | £13,877.87</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust | 12 Dec 21 | 0203415-0001 | £9,009.09</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust | 10 Dec 21 | 0203415-0001 | £2,990.78</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item><ion-avatar>
+          <img alt="Stock A" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
           <ion-label>Liontrust | 8 Dec 21 | 0203415-0001 | £679.21</ion-label>
         </ion-item>
       </ion-list>
