--- a/src/app/example.component.html
+++ b/src/app/example.component.html
@@ -28,9 +28,10 @@
           <ion-item slot="header" color="light-contrast">
             <ion-label>Scottish widows lump sum OEIC</ion-label>
           </ion-item>
-          <div class="ion-padding" slot="content">Scottish widows OEIC<div>
-            
-        </div></div>
+          <div class="ion-padding" slot="content">
+            Scottish widows OEIC
+            <div></div>
+          </div>
         </ion-accordion>
         <ion-accordion value="second">
           <ion-item slot="header" color="light-contrast">
@@ -63,28 +64,21 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="apps-outline"></ion-icon>
-      
     </ion-tab-button>
     <ion-tab-button tab="funds">
       <ion-icon name="cash-outline"></ion-icon>
-    
-      
     </ion-tab-button>
     <ion-tab-button tab="transactions">
       <ion-icon name="reload-circle-outline"></ion-icon>
-      
     </ion-tab-button>
     <ion-tab-button tab="search">
       <ion-icon name="search"></ion-icon>
-      
     </ion-tab-button>
     <ion-tab-button tab="help">
       <ion-icon name="help-outline"></ion-icon>
-      
     </ion-tab-button>
     <ion-tab-button tab="settings">
       <ion-icon name="settings-outline"></ion-icon>
-      
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
