--- a/src/app/example.component.html
+++ b/src/app/example.component.html
@@ -1,65 +1,38 @@
 <ion-header>
   <ion-row>
-    <ion-title>Hi Greg</ion-title>
-    <ion-icon name="document-outline" float="right"></ion-icon>
-    <ion-icon name="notifications-outline" float="right"></ion-icon>
+    <ion-title>Welcome Greg</ion-title>
+  
   </ion-row>
 </ion-header>
-
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>Portfolio total</ion-card-title>
-  </ion-card-header>
-
-  <ion-card-content>
-    <strong> £452,657.98 </strong>
-  </ion-card-content>
-  <ion-chip [outline]="true">ISA</ion-chip>
-  <ion-chip>GIA</ion-chip>
-  <ion-chip>JISA</ion-chip>
-</ion-card>
+<ion-row>
+  <ion-card class="ion-padding">
+    <ion-card-header>
+      <ion-card-title>Let's start investing</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Show me my assets</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  
+</ion-row><ion-row>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>View my transactions</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>View my documents</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  
+</ion-row>
 
 <ion-tabs>
   <ion-router-outlet></ion-router-outlet>
-  <ion-row>
-    <ion-col>
-      <ion-accordion-group expand="inset">
-        <ion-accordion value="first">
-          <ion-item slot="header" color="light-contrast">
-            <ion-label>Scottish widows lump sum OEIC</ion-label>
-          </ion-item>
-          <div class="ion-padding" slot="content">
-            Scottish widows OEIC
-            <div></div>
-          </div>
-        </ion-accordion>
-        <ion-accordion value="second">
-          <ion-item slot="header" color="light-contrast">
-            <ion-label>Scottish widows OEIC</ion-label>
-          </ion-item>
-          <div class="ion-padding" slot="content">Scottish widows OEIC</div>
-        </ion-accordion>
-        <ion-accordion value="third">
-          <ion-item slot="header" color="light-contrast">
-            <ion-label>Scottish OEIC</ion-label>
-          </ion-item>
-          <div class="ion-padding" slot="content">Bonds</div>
-        </ion-accordion>
-        <ion-accordion value="fourth">
-          <ion-item slot="header" color="light-contrast">
-            <ion-label>Scottish OEIC</ion-label>
-          </ion-item>
-          <div class="ion-padding" slot="content">Bonds</div>
-        </ion-accordion>
-        <ion-accordion value="fifth">
-          <ion-item slot="header" color="light-contrast">
-            <ion-label>Scottish OEIC</ion-label>
-          </ion-item>
-          <div class="ion-padding" slot="content">Bonds</div>
-        </ion-accordion>
-      </ion-accordion-group>
-    </ion-col>
-  </ion-row>
+  
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
