--- a/src/app/example.component.html
+++ b/src/app/example.component.html
@@ -1,11 +1,11 @@
-<ion-header>
+<ion-header slot="top">
   <ion-row>
     <ion-title>Welcome Greg</ion-title>
   
   </ion-row>
 </ion-header>
 <ion-row>
-  <ion-card class="ion-padding">
+  <ion-card slot="center">
     <ion-card-header>
       <ion-card-title>Let's start investing</ion-card-title>
     </ion-card-header>
@@ -29,6 +29,8 @@
   </ion-card>
   
 </ion-row>
+
+
 
 <ion-tabs>
   <ion-router-outlet></ion-router-outlet>
