--- a/src/app/example.component.html
+++ b/src/app/example.component.html
@@ -5,7 +5,7 @@
   </ion-row>
 </ion-header>
 <ion-row>
-  <ion-card slot="center">
+  <ion-card>
     <ion-card-header>
       <ion-card-title>Let's start investing</ion-card-title>
     </ion-card-header>
